[project]
name = "workout"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "pydantic",
    "uvicorn",
    "alembic",
]

[tool.ruff]
line-length = 88
target-version = "py314"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
